tests/natural_inference_object/natural_inference_object.exp
Error -------------------------------------------------------------------------------------------------- enforced.js:2:1

Cannot cast `foo` to object type because property `bar` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   enforced.js:2:1
   2| foo as {bar?: string}; // error
      ^^^

References:
   enforced.js:1:13
   1| const foo = {};
                  ^^ [1]
   enforced.js:2:8
   2| foo as {bar?: string}; // error
             ^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- enforced.js:5:1

Cannot cast `bar` to object type because string [1] is incompatible with number [2] in property `baz`. 

This property is invariantly typed. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number. [incompatible-type]

   enforced.js:5:1
   5| bar as {baz: string | number}; // error
      ^^^

References:
   enforced.js:5:14
   5| bar as {baz: string | number}; // error
                   ^^^^^^ [1]
   enforced.js:4:19
   4| const bar = {baz: 1};
                        ^ [2]



Found 2 errors
